--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -97,7 +97,7 @@
 	},
 
 	"settings_popup-position_domain_description": {
-		"message": "Entries without a subdomain (e.g. www) apply to all subdomains. Multiple domains can be used by separating the entries with a comma (,). Example value: github.com,www.google.com",
+		"message": "Entries without a subdomain (e.g. www) also apply to all of its subdomains. Multiple domains can be used by separating the entries with a comma (,). Example value: github.com,www.google.com",
 		"description": "Settings description for popup position column"
 	},
 
