Minor text fixes.
Ref #14

Signed-off-by: aqt <git@raz.sexy>

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -118,7 +118,7 @@
 	},
 
 	"button_menu-item_restore": {
-		"message": "Restore to tab...",
+		"message": "Restore to this window...",
 		"description": "Item in button menu for restoring tab"
 	},
 
